--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <br>
                 <br>
 
-                <a href="www.ucsh.edu.mm"> ဟင်္သာတကွန်ပျူတာတက္ကသိုလ်</a> ကနေ <b> Computer Science</b>
+                <a href="http://www.ucsh.edu.mm"> ဟင်္သာတကွန်ပျူတာတက္ကသိုလ်</a> ကနေ <b> Computer Science</b>
                 နဲ့ ကျောင်းပြီးထားပါတယ်။
 
                 <br>
